[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "replmux"
version = "0.1.0"
description = "A tiny persistent Python REPL multiplexer for humans and coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Eduardo Azevedo" }
]
keywords = [
  "repl",
  "tmux",
  "agent",
  "python",
  "pair-programming",
  "persistent-session"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Terminals"
]
dependencies = []

[dependency-groups]
dev = [
  "build >= 1.2",
  "pytest >= 8",
  "ruff >= 0.11",
  "twine >= 5"
]

[project.scripts]
replmux = "replmux.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/replmux"]
